<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"
    tools:context=".SimplePastFragment2"
    android:id="@+id/fragment2">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/exercises"
                android:textColor="@color/dark_silver"
                android:textStyle="bold"/>

            <!-- Question No 1 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question_simple_past_test1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="0dp"
                    android:text="@string/exercise_simple_past_test1"
                    android:textColor="@color/dark_silver" />

                <Button
                    android:id="@+id/tooltip_simple_past_test1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/tips"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/first_exercise_meaning_test1"
                android:textColor="@color/dark_silver" />

            <EditText
                android:id="@+id/answer_simple_past_test1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint"
                android:textSize="15sp">

            </EditText>


            <!-- Question No 2 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question_simple_past_test2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="0dp"
                    android:text="@string/exercise_simple_past_test2"
                    android:textColor="@color/dark_silver" />

                <Button
                    android:id="@+id/tooltip_simple_past_test2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/tips"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/first_exercise_meaning_test2"
                android:textColor="@color/dark_silver" />

            <EditText
                android:id="@+id/answer_simple_past_test2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint"
                android:textSize="15sp">

            </EditText>


            <!-- Question No 3 -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp">

                <TextView
                    android:id="@+id/question_simple_past_test3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:paddingTop="0dp"
                    android:text="@string/exercise_simple_past_test3"
                    android:textColor="@color/dark_silver" />

                <Button
                    android:id="@+id/tooltip_simple_past_test3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/tips"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/first_exercise_meaning_test3"
                android:textColor="@color/dark_silver" />

            <EditText
                android:id="@+id/answer_simple_past_test3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="15dp"
                android:hint="@string/hint"
                android:textSize="15sp">

            </EditText>


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</FrameLayout>
