<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="1dp"
    tools:context=".SimplePastFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linear_layout1"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_background_lightsilver"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView_simple_past_explain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simple_past_explain"
                    android:textColor="@color/dark_silver"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/linear_layout1"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_background_silver"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/example"
                    android:textColor="@color/dark_silver"/>

                <TextView
                    android:id="@+id/bullet1_simple_past"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/first_bullet"
                    android:textColor="@color/dark_silver"/>

                <TextView
                    android:id="@+id/bullet2_simple_past"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/second_bullet"
                    android:textColor="@color/dark_silver"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/bullet3_simple_past"
                    android:layout_margin="5dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginStart="25dp"
                    android:lineSpacingExtra="3dp"
                    android:text="@string/third_bullet"
                    android:textColor="@color/dark_silver"/>

            </LinearLayout>

        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>